--- a/_posts/2024-06-17-90.md
+++ b/_posts/2024-06-17-90.md
@@ -37,7 +37,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 
 <hr>
 <p data-ke-size="size16">정책브리핑의 정책뉴스 자료는 「공공누리 제1유형:출처표시」의 조건에 따라 자유롭게 이용이 가능하며, 출처를 반드시 표기해야 합니다. 위반 시 저작권법에 의거하여 처벌될 수 있습니다.</p>
-<p data-ke-size="size16">자료출처: <a href="https://newsdao.kr/4172">뉴스다오</a>, <a href="www.korea.kr">정책브리핑</a></p>
+<p data-ke-size="size16">자료출처: <a href="https://newsdao.kr/4172">뉴스다오</a></p>
 <hr>
 <table>
   <tbody>
