--- a/_posts/2024-06-17-100.md
+++ b/_posts/2024-06-17-100.md
@@ -47,7 +47,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 보건복지부의 결정은 기증자와 유족의 뜻을 존중하고, 영리 목적의 해부 참관 교육을 금지하며, 교육의 공정성과 기증자의 존엄성을 보장하는 방향으로 이루어지고 있습니다. 이는 법적인 틀 안에서 커대버의 활용이 더 엄격하게 규제되며, 교육의 질 향상을 기대할 수 있습니다.
 
 <p data-ke-size="size16">출처: <a href="https://newsdao.kr/4278">뉴스다오</a></p>
-<p data-ke-size="size16">자료출처: 정책브리핑 (<a href="www.korea.kr">www.korea.kr</a>)</p>
+<p data-ke-size="size16">자료출처: 정책브리핑</p>
 <p data-ke-size="size16">공공누리 제1유형: 출처표시</p> 
 
 신속 뉴스 바로가기 👉 <a href="https://newsdao.kr" rel="dofollow">https://newsdao.kr</a>
