--- a/_posts/2024-06-19-293.md
+++ b/_posts/2024-06-19-293.md
@@ -49,7 +49,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 
 <p data-ke-size="size16"></p>
 
-<p>문의 및 추가 정보는 기획재정부 경제정책국 경제분석과로 문의 바랍니다. 정책브리핑 자료는 공공누리 제1유형의 조건에 따라 자유롭게 이용 가능하나, 출처를 표기하지 않거나 제3자에게 권한을 넘기는 경우 저작권 침해로 간주될 수 있습니다. 자세한 사항은 <a href="www.korea.kr">정책브리핑</a>을 참조하시기 바랍니다.</p> 
+<p>문의 및 추가 정보는 기획재정부 경제정책국 경제분석과로 문의 바랍니다. 정책브리핑 자료는 공공누리 제1유형의 조건에 따라 자유롭게 이용 가능하나, 출처를 표기하지 않거나 제3자에게 권한을 넘기는 경우 저작권 침해로 간주될 수 있습니다. 자세한 사항은 정책브리핑을 참조하시기 바랍니다.</p> 
 
 신속 뉴스 바로가기 👉 <a href="https://newsdao.kr" rel="dofollow">https://newsdao.kr</a>
 
