--- a/_posts/2024-06-19-325.md
+++ b/_posts/2024-06-19-325.md
@@ -28,7 +28,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 이와 관련한 뉴스는 다음 링크에서 확인할 수 있습니다. 
 - 기재부 “가스요금 조정 여부 결정된 바 없어” - 기획재정부 | <a href="https://newsdao.kr/3977">뉴스다오 링크</a>
 
-정부의 입장을 공식적으로 확인하기 위해서는 정책브리핑(<a href="www.korea.kr">www.korea.kr</a>)에 문의할 수 있습니다. 담당 부서인 기획재정부 기획재정부 물가정책과(044-215-2770)로 연락하여 자세한 내용을 확인할 수 있습니다. 
+정부의 입장을 공식적으로 확인하기 위해서는 정책브리핑에 문의할 수 있습니다. 담당 부서인 기획재정부 기획재정부 물가정책과(044-215-2770)로 연락하여 자세한 내용을 확인할 수 있습니다. 
 
 신속 뉴스 바로가기 👉 <a href="https://newsdao.kr" rel="dofollow">https://newsdao.kr</a>
 
