--- a/_posts/2024-06-22-350.md
+++ b/_posts/2024-06-22-350.md
@@ -74,7 +74,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 <hr>
 
 <h2 data-ke-size="size26">정책브리핑의 유의사항</h2>
-<p data-ke-size="size16">정책브리핑의 자료는 "공공누리 제4유형:출처표시+상업적 이용금지+변경금지"의 조건에 따라 이용 가능합니다. 다만, 사진은 제3자에게 저작권이 있으므로 사용할 수 없습니다. 기사 이용 시에는 출처를 반드시 표기해야 하며, 위반 시 저작권법에 따라 처벌될 수 있습니다. (자료출처: <a href="www.korea.kr">정책브리핑 www.korea.kr</a>)</p> 
+<p data-ke-size="size16">정책브리핑의 자료는 "공공누리 제4유형:출처표시+상업적 이용금지+변경금지"의 조건에 따라 이용 가능합니다. 다만, 사진은 제3자에게 저작권이 있으므로 사용할 수 없습니다. 기사 이용 시에는 출처를 반드시 표기해야 하며, 위반 시 저작권법에 따라 처벌될 수 있습니다. </p> 
 
 신속 뉴스 바로가기 👉 <a href="https://newsdao.kr" rel="dofollow">https://newsdao.kr</a>
 
