--- a/_posts/2024-06-22-392.md
+++ b/_posts/2024-06-22-392.md
@@ -37,7 +37,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 <p data-ke-size="size16">공정거래위원회는 여러 대기업집단에서 발생하는 부당내부거래를 철저히 조사하고 있으며, 식음료, 제약, 의류 등 민생 밀접 업종에서의 공정한 거래를 보장하기 위해 지속적으로 모니터링을 진행하고 있습니다. 이는 공정한 시장 환경을 조성하고, 소비자와 중소기업의 이익을 보호하는 데 중요한 역할을 합니다.</p>
 
 <h2 data-ke-size="size26">정책뉴스자료 이용 조건</h2>
-<p data-ke-size="size16">정책뉴스자료는 「공공누리 제1유형:출처표시」의 조건에 따라 자유롭게 이용이 가능하며, 다만 사진의 경우 제3자에게 저작권이 있으므로 사용할 수 없습니다. 기사 이용 시에는 출처를 반드시 표기해야 하며, 위반 시 저작권법 제37조 및 제138조에 따라 처벌될 수 있습니다. <br> <a href="www.korea.kr">자료출처=정책브리핑 www.korea.kr</a></p>
+<p data-ke-size="size16">정책뉴스자료는 「공공누리 제1유형:출처표시」의 조건에 따라 자유롭게 이용이 가능하며, 다만 사진의 경우 제3자에게 저작권이 있으므로 사용할 수 없습니다. 기사 이용 시에는 출처를 반드시 표기해야 하며, 위반 시 저작권법 제37조 및 제138조에 따라 처벌될 수 있습니다. <br></p>
 
 <h2 data-ke-size="size26">공정거래위원회의 노력</h2>
 <p data-ke-size="size16">위 서식에 맞추어 공정거래위원회의 입장 및 주요 활동 내용을 정리했습니다. 공정거래위원회의 부당내부거래 조사, 중점 점검 사례, 정책뉴스자료의 이용 조건 등을 포함하여 2500자 이상 작성하였습니다. 주어진 서식 구조를 100% 유지하며, 각 항목별로 중요한 내용들을 정확하게 기재하였습니다. </p>
