--- a/_posts/2024-06-22-405.md
+++ b/_posts/2024-06-22-405.md
@@ -50,7 +50,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 
 <p data-ke-size="size16">환경부의 기후탄소정책실장인 이창흠님은 “이번 행사를 통해 녹색소비가 나와 가족 그리고 지구를 위하는 가장 쉽고 가치 있는 방법이라는 것을 경험하는 기회가 되기를 바란다”며 “녹색소비의 핵심이 되는 녹색제품이 국민의 삶에서 더욱 확산되도록 노력하겠다”고 밝혔습니다.</p>
 
-<p data-ke-size="size16">더 많은 정보는 <a href="http://keiti.re.kr">한국환경산업기술원 누리집</a>에서 확인하실 수 있습니다.</p>
+<p data-ke-size="size16">더 많은 정보는 한국환경산업기술원 누리집에서 확인하실 수 있습니다.</p>
 <p data-ke-size="size16"></p> 
 
 신속 뉴스 바로가기 👉 <a href="https://newsdao.kr" rel="dofollow">https://newsdao.kr</a>
