--- a/_posts/2024-06-22-418.md
+++ b/_posts/2024-06-22-418.md
@@ -39,7 +39,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 <p data-ke-size="size16">입법예고 기간동안 국민과 관계기관 등 이해관계자의 다양한 의견을 수렴해 개정안에 반영하고, 개정안은 올 하반기 시행 예정입니다.</p>
 
 <p data-ke-size="size16">더 자세한 내용은 아래 링크에서 확인할 수 있습니다.</p>
-<p data-ke-size="size16">자료출처: <a href="http://opinion.lawmaking.go.kr">국민참여입법센터 누리집</a></p>
+<p data-ke-size="size16">자료출처: 국민참여입법센터</p>
 
 <hr>
 <p data-ke-size="size16">&nbsp;</p> 
