--- a/_posts/2024-06-24-518.md
+++ b/_posts/2024-06-24-518.md
@@ -33,7 +33,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 <p data-ke-size="size16">미래를 위한 정책적 개선</p>
 동해 심해 자원개발을 앞으로 더욱 효율적이고 공정하게 하기 위해 산업부는 다양한 제도적 개선을 예고하고 있습니다. 이는 조광료, 세금, 지분 등 모든 측면에서의 개선을 포함합니다. 특히, 해외 기업과의 협력을 강화하며 동시에 우리나라의 이익을 최대한 확보하는 방식으로 접근할 것입니다. 정부는 이를 통해 더 많은 수익과 자원을 확보할 계획입니다. 앞으로도 산업부는 국민과의 소통을 강화하며, 보다 투명하고 공정한 정책을 추진할 것입니다.
 
-동해 심해 자원개발과 관련한 최신 내용과 변화에 대해 더욱 많은 정보가 필요하시면, [정책브리핑](http://www.korea.kr)에서 확인해보세요. 더 나은 경제적 발전과 자원 확보를 위해 산업부의 노력은 계속될 것입니다.
+동해 심해 자원개발과 관련한 최신 내용과 변화에 대해 더욱 많은 정보가 필요하시면, 정책브리핑에서 확인해보세요. 더 나은 경제적 발전과 자원 확보를 위해 산업부의 노력은 계속될 것입니다.
 
 <hr>
 
