--- a/_posts/2024-06-24-622.md
+++ b/_posts/2024-06-24-622.md
@@ -47,7 +47,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 
 <p data-ke-size="size16">&nbsp;</p>
 <h2 data-ke-size="size26">정책브리핑의 정책뉴스 자료 이용규칙</h2>
-본 자료는 「공공누리 제4유형:출처표시+상업적 이용금지+변경금지」의 조건에 따라 자유롭게 이용할 수 있습니다. 단, 출처인 정책브리핑을 표기해주셔야 합니다. 또한, 사진은 제3자에게 저작권이 있으므로 사용할 수 없습니다. 자세한 내용은 <a href="www.korea.kr" target="_blank" rel="noopener">공공누리</a>에서 확인하실 수 있습니다.
+본 자료는 「공공누리 제4유형:출처표시+상업적 이용금지+변경금지」의 조건에 따라 자유롭게 이용할 수 있습니다. 단, 출처인 정책브리핑을 표기해주셔야 합니다. 또한, 사진은 제3자에게 저작권이 있으므로 사용할 수 없습니다. 자세한 내용은 공공누리에서 확인하실 수 있습니다.
 
 <hr>
 <p data-ke-size="size16"></p> 
