--- a/_posts/2024-06-24-653.md
+++ b/_posts/2024-06-24-653.md
@@ -43,7 +43,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
     </tr>
 </table>
 <p data-ke-size="size16">&nbsp;</p>
-<p data-ke-size="size16">자세한 행사 일정과 참가 신청은 '2024 대한민국 자전거 대축제 in 공주' <a href="www.bikefestival.kr">공식 홈페이지</a>에서 확인할 수 있으며, 질문이 있을 경우 자전거의 날 행사 사무국(1566-9310)에 문의할 수 있습니다.</p> 
+<p data-ke-size="size16">자세한 행사 일정과 참가 신청은 '2024 대한민국 자전거 대축제 in 공주' 공식 홈페이지에서 확인할 수 있으며, 질문이 있을 경우 자전거의 날 행사 사무국(1566-9310)에 문의할 수 있습니다.</p> 
 
 신속 뉴스 바로가기 👉 <a href="https://newsdao.kr" rel="dofollow">https://newsdao.kr</a>
 
