--- a/_posts/2024-06-24-686.md
+++ b/_posts/2024-06-24-686.md
@@ -24,7 +24,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 
 <h2 data-ke-size="size26">정책브리핑 출처</h2>
 
-<p data-ke-size="size16">이 기사의 자료 출처는 정책브리핑의 <a href="www.korea.kr">공식 웹사이트</a>로 확인할 수 있습니다.</p>
+<p data-ke-size="size16">이 기사의 자료 출처는 정책브리핑의 공식 웹사이트로 확인할 수 있습니다.</p>
 
 <table style="width: 603px;">
 <tbody>
