--- a/_posts/2024-07-01-1.md
+++ b/_posts/2024-07-01-1.md
@@ -51,7 +51,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 
 <h2 data-ke-size="size26">정책브리핑 자료 출처</h2>
 
-<p data-ke-size="size16">본 정책브리핑의 자료는 <a href="www.korea.kr">공공누리</a> 제1유형인 출처표시 조건에 따라 자유롭게 이용이 가능합니다.</p>
+<p data-ke-size="size16">본 정책브리핑의 자료는 공공누리 제1유형인 출처표시 조건에 따라 자유롭게 이용이 가능합니다.</p>
 
 <ul>
 <li>중요한 내용</li>
