--- a/_posts/2024-07-01-3.md
+++ b/_posts/2024-07-01-3.md
@@ -27,7 +27,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 
 <h3>정책브리핑 자료 이용에 대한 주의사항</h3>
 
-<p data-ke-size="size16">정책브리핑의 정책뉴스자료는 「공공누리 제1유형:출처표시」의 조건에 따라 자유롭게 이용이 가능하며, 출처를 표기하면 무료로 자료를 이용할 수 있다. 다만, 사진의 경우 제3자에게 저작권이 있으므로 사용할 수 없으니 주의해야 한다. 또한, 기사 이용 시에는 출처를 반드시 표기해야 하며, 위반 시 저작권법 제37조 및 제138조에 따라 처벌받을 수 있다는 점을 유의해야 한다. (<a href="www.korea.kr">자료출처=정책브리핑 www.korea.kr</a>)</p>
+<p data-ke-size="size16">정책브리핑의 정책뉴스자료는 「공공누리 제1유형:출처표시」의 조건에 따라 자유롭게 이용이 가능하며, 출처를 표기하면 무료로 자료를 이용할 수 있다. 다만, 사진의 경우 제3자에게 저작권이 있으므로 사용할 수 없으니 주의해야 한다. 또한, 기사 이용 시에는 출처를 반드시 표기해야 하며, 위반 시 저작권법 제37조 및 제138조에 따라 처벌받을 수 있다는 점을 유의해야 한다.</p>
 
 <hr>
 
