--- a/_posts/2024-07-04-444.md
+++ b/_posts/2024-07-04-444.md
@@ -1,9 +1,5 @@
 ---
-title: 1. 농어촌 삶의 질, 14조 5800억 원 투입으로 향상
-2. 14조 5800억 원, 농어촌 삶의 질을 향상시킨다
-3. 농어촌 삶의 질, 14조 5800억 원의 투자로 향상 예정
-4. 14조 5800억 원, 농어촌 삶의 질을 향상시킨다
-5. 농어촌 삶의 질, 14조 5800억 원 투입으로 증진된다
+title: 농어촌 삶의 질, 14조 5800억 원 투입으로 향상
 categories:
   - News
 excerpt: >
