--- a/_posts/2024-07-07-748.md
+++ b/_posts/2024-07-07-748.md
@@ -34,7 +34,7 @@ image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 
 <h3><b>신청 방법</b></h3>
 
-<p data-ke-size="size16">신청은 <a href="http://www.전기요금특별지원.kr">소상공인전기요금특별지원.kr</a>에서 온라인으로 가능하며, 어려운 경우 소상공인시장진흥공단 77개 지역센터에 방문하여 도움을 받을 수 있습니다.</p>
+<p data-ke-size="size16">신청은 소상공인전기요금특별지원에서 온라인으로 가능하며, 어려운 경우 소상공인시장진흥공단 77개 지역센터에 방문하여 도움을 받을 수 있습니다.</p>
 
 <h3><b>신청 시 유의사항</b></h3>
 
