--- a/_posts/2024-07-08-829.md
+++ b/_posts/2024-07-08-829.md
@@ -9,7 +9,7 @@ feature_text: >
 image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 ---
 
-<p><img src="httpss://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg" alt="ranknews 속보" /></p>
+<p><img src="https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg" alt="ranknews 속보" /></p>
 
 <h2 data-ke-size="size26">긴급재난문자 발송, 호우특보 발효</h2>
 
