--- a/_posts/2024-07-08-830.md
+++ b/_posts/2024-07-08-830.md
@@ -9,7 +9,7 @@ feature_text: >
 image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 ---
 
-<p><img src="httpss://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg" alt="ranknews 속보" /></p>
+<p><img src="https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg" alt="ranknews 속보" /></p>
 
 <h4>홍명보 감독 내정 소식에 관심 집중</h4>
 
