--- a/_posts/2024-07-08-833.md
+++ b/_posts/2024-07-08-833.md
@@ -9,7 +9,7 @@ feature_text: >
 image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 ---
 
-<p><img src="httpss://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg" alt="ranknews 속보" /></p>
+<p><img src="https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg" alt="ranknews 속보" /></p>
 
 <h2>당 함량 조사 결과 및 안전성 문제</h2>
 
