--- a/_posts/2024-07-08-831.md
+++ b/_posts/2024-07-08-831.md
@@ -9,7 +9,7 @@ feature_text: >
 image: 'https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg'
 ---
 
-<p><img src="httpss://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg" alt="ranknews 속보" /></p>
+<p><img src="https://newsdao.kr/res/images/meta/newsdao_breakingnews.jpg" alt="ranknews 속보" /></p>
 
 <h2 data-ke-size="size26">한동훈 vs. 원희룡: 대화와 논란</h2>
 
