--- a/_posts/2024-07-08-890.md
+++ b/_posts/2024-07-08-890.md
@@ -1,6 +1,5 @@
 ---
-title: 1. 화성시 전기차와 수소차 공용차량의 긴급 배터리 점검
-2. 화성시 전기차와 수소차 공용차량의 긴급 배터리 점검!
+title: 화성시 전기차와 수소차 공용차량의 긴급 배터리 점검
 categories:
   - News
 excerpt: >
