--- a/_posts/2024-07-08-913.md
+++ b/_posts/2024-07-08-913.md
@@ -1,9 +1,5 @@
 ---
-title: 1. 광주서 합동연설회 김여사 문자 무시 논란 가열
-2. 광주 합동연설회 김여사 문자 무시 논란 가열…여성리더십
-3. 광주 합동연설회 논란 가열…김여사 문자 무시와 여성
-4. 광주 합동연설회 논란 가열…김여사 문자 무시로 논란
-5. 광주 합동연설회 김여사 문자 무시 논란 가열…주목
+title: 광주 합동연설회 김여사 문자 무시 논란 가열…여성리더십
 
 categories:
   - News
