--- a/_posts/2024-07-09-1053.md
+++ b/_posts/2024-07-09-1053.md
@@ -1,7 +1,5 @@
 ---
-title: 1. 주한미군 혁신적 변화 예상…핵무장 논의 한국에 도움 안 돼
-2. 혁신적 변화 핵무장 논의…주한미군 한국에 도움 안 돼
-3. 핵무장 논의 주한미군 혁신적 변화…한국에 도움 안 돼
+title: 주한미군 혁신적 변화 예상…핵무장 논의 한국에 도움 안 돼
 categories:
   - News
 excerpt: >
