--- a/_posts/2024-07-14-1616.md
+++ b/_posts/2024-07-14-1616.md
@@ -1,6 +1,5 @@
 ---
-title: 머스크 트럼프 루스벨트 비밀경호국 사퇴  기사 제목 생성하기 위한 키워드입니다.
-머스크 트럼프 루스벨트 비밀경호국 사퇴  기사 제목 생성하기 위한 키워드입니다.
+title: 머스크 트럼프 루스벨트 비밀경호국 사퇴
 categories:
   - News
 excerpt: >
