--- a/_posts/2024-07-18-2195.md
+++ b/_posts/2024-07-18-2195.md
@@ -1,9 +1,5 @@
 ---
-title: 1. 한컴 회장 비자금 혐의로 96억 코인으로 구속 면했다
-2. 비자금 96억 코인 한컴 회장 구속 면했다
-3. 한컴 회장 96억 비자금 코인으로 혐의에 구속 면함
-4. 비자금 혐의 한컴 회장 96억 코인으로 구속 면함
-5. 96억 코인 한컴 회장 비자금 혐의로 구속 면함
+title: 한컴 회장 비자금 혐의로 96억 코인으로 구속 면했다
 categories:
   - News
 excerpt: >
