--- a/_posts/2024-07-18-2197.md
+++ b/_posts/2024-07-18-2197.md
@@ -1,7 +1,5 @@
 ---
-title: 1. 수도권·중부 극한 호우로 2명 실종 침수·재해 우려
-2. 극한 호우로 수도권·중부 2명 실종 침수·재해 우려
-3. 수도권·중부 극한 호우 2명 실종 침수·재해 우려 여전
+title: 수도권·중부 극한 호우로 2명 실종 침수·재해 우려
 categories:
   - News
 excerpt: >
